hphp/test/zend/good/ext/gd/tests/libgd00094.php.skipif
<?php
	if (!extension_loaded('gd')) die("skip gd extension not available\n");
	if (!GD_BUNDLED) die("skip requires bundled GD library\n");
?>