hphp/test/zend/bad/ext/gd/tests/createfromwbmp2.php.skipif
<?php
	if (!function_exists('imagecreatefromwbmp')) die("skip gd extension not available\n");
	if (!GD_BUNDLED) die("skip requires bundled GD library\n");
?>